--- a/Covid Prediction project.ipynb
+++ b/Covid Prediction project.ipynb
@@ -6,8 +6,7 @@
    "source": [
     "<img src=\"https://directorsblog.nih.gov/wp-content/uploads/2020/03/COVID-19-Card-3.jpg\" width=\"400\">\n",
     "\n",
-    "# <center>*MACHINE LEARNING PROJECT*</center>\n",
-    "## <center>Covid-19 Deaths Prediction</center>"
+    "# <center>Covid-19 Deaths Prediction</center>"
    ]
   },
   {
